[tool.poetry]
name = "uptimer_ecn"
version = "0.1.0"
description = ""
authors = ["nesseri <eric.ness@chrobinson.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
requests = "^2.26.0"
colorama = "^0.4.4"
pytest = "^6.2.5"
Sphinx = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
